# PatternRecognizer

./: README.md  README2_camera.md  README2_image_proc.md  README_App.md  README_Logger.md  README_visualizer.md  pyproject.toml
code/: app.py
code/Camera/: camera.py
code/Logger/: logger.py
logs/: Pattern_log.csv
